transformation into gradle project (Part II)